syntax = "proto3";

package org.polarmeet.proto;

option java_multiple_files = true;
option java_package = "org.polarmeet.proto";
option java_outer_classname = "StreamingProto";

service StreamingService {
  rpc StreamData (stream StreamRequest) returns (stream StreamResponse) {}
}

message StreamRequest {
  string client_id = 1;
  int64 connection_timestamp = 2;  // Added for connection timing
  string message = 3;  // Added for client messages
}

message StreamResponse {
  int32 stream_id = 1;
  string data = 2;
  int64 timestamp = 3;
}